Bug 363138 - Knotify not logging notifications to file
Summary: Knotify not logging notifications to file
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knotifications
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Klapetek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-16 14:46 UTC by Prime Jyothi
Modified: 2017-02-02 00:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.31.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Prime Jyothi 2016-05-16 14:46:13 UTC
The notifications received can be logged into a file using the "Log to a file" option. However, no details are logged into the file

Reproducible: Always

Steps to Reproduce:
1. Pair an Android device with KDE
2. In "Configure Event Notifications and Actions...", select "Notifications from your devices"
3. Select "Ping Received" and "Show a message in a popup" and "Log to a file" items. Select a text file in home folder for logging.
4. Send a ping from the Android device.

Actual Results:  
When the device ping, a pop up notification is shown on desktop and the text "Ping!" is added to the file selected for logging.

Expected Results:  
Message not logged into the file selected for logging.

The notification (Ping!) should be written in the file selected for logging.
System info : 
Fedora 23, 64bit
kwin 5.6.3
Comment 1 Gabriel Caudrelier 2017-01-29 22:30:09 UTC
This bug is still current.

to fix:

uncomment the line in 
https://cgit.kde.org/knotifications.git/tree/src/knotificationmanager.cpp:80

~~~ code
    //FIXME: port and reenable
//     addPlugin(new NotifyByLogfile(this));

~~~

I believe this was ported already ... a couple of years ago.

https://cgit.kde.org/knotifications.git/log/src/notifybylogfile.cpp

Just need to re-enable it.
Comment 2 Christoph Feck 2017-01-30 23:38:45 UTC
I can confirm it correctly compiles with the "NotifyByLogfile" plugin added, using Qt 5.8 and without KDELibs4Support.

Needs someone able to test it, though.
Comment 3 Gabriel Caudrelier 2017-01-31 00:53:05 UTC
works fine for me.

Although you probably meant someone more official.
Comment 4 Christoph Feck 2017-01-31 01:17:09 UTC
Thanks for the confirmation. https://phabricator.kde.org/D4357
Comment 5 Christoph Feck 2017-02-02 00:29:20 UTC
Git commit cd83fadb9888ff344f7b89deda5b17ecbba94b1c by Christoph Feck.
Committed on 02/02/2017 at 00:26.
Pushed by cfeck into branch 'master'.

Re-add logging notifications to files

Thanks to Gabriel Caudrelier for the investigation.

Differential Revision: https://phabricator.kde.org/D4357
FIXED-IN: 5.31.0

M  +1    -1    src/CMakeLists.txt
M  +1    -2    src/knotificationmanager.cpp

https://commits.kde.org/knotifications/cd83fadb9888ff344f7b89deda5b17ecbba94b1c