Re-add logging notifications to files

Thanks to Gabriel Caudrelier for the investigation.

Differential Revision: https://phabricator.kde.org/D4357

BUG: 363138
FIXED-IN: 5.31.0